# slack-mcp

./: LICENSE  README.md  pyproject.toml
src/slack_mcp/: __init__.py  server.py  slack_client.py  tools.py
tests/: test_tools_smoke.py
